# dd-avx-v2-krylov

./: CMakeLists.txt  README.md  clean.sh  todo.txt
doc/: DD-AVX.pptx
include/: DD-AVX.hpp  DD-AVX_Config.hpp  DD-AVX_Config.hpp.in  DD-AVX_MACRO_AVX.hpp  DD-AVX_MACRO_Scalar.hpp
sample/: 2_DD_cgnr.cpp  2_D_cgnr.cpp  2_matrix.mtx  2_matrix.mtx~  3_matrix.mtx  3_matrix.mtx~  3_vector.mtx~  DD_bicg.cpp  DD_bicg.cpp~  DD_cg.cpp  DD_cgne.cpp  DD_cgnr.cpp  D_bicg.cpp  D_cg.cpp  D_cgne.cpp  D_cgnr.cpp  Makefile  a.out  bicg.cpp  bicg.cpp~  bicg.c~  compile.sh  debug.mtx  debug.mtx~  dummy.mtx  gamma.mtx  gamma.mtx~  gamma.txt  gamma_gen.rb~  log  main  main.cpp  mtx_gen.rb  mtx_gen.rb~  res.txt  result.txt  t_gamma.mtx  t_gamma.mtx~  t_gamma.txt  test2.mtx~
src/: .swp  DD-AVX.cpp
src/matvec/: DD-AVX_crs.cpp  DD-AVX_matvec.cpp
src/scalar/: .DD-AVX_Scalar.cpp.swp  DD-AVX_Scalar.cpp
src/system/: DD-AVX_matIO.cpp  DD-AVX_vecIO.cpp
src/vector/: DD-AVX_axpy.cpp  DD-AVX_axpyz.cpp  DD-AVX_dot.cpp  DD-AVX_nrm2.cpp  DD-AVX_scale.cpp  DD-AVX_xpay.cpp
